# dataform-bigquery-pipeline-pattern

./: .editorconfig  .gitignore  LICENSE  README.md  package.json  pyproject.toml  workflow_settings.yaml
.github/workflows/: dataform-compile.yml  python-lint.yml
definitions/gold/: dim_stores.sqlx  fct_orders.sqlx  fct_orders_incremental.sqlx
definitions/silver/: order_items_clean.sqlx  orders_clean.sqlx  stores_clean.sqlx
definitions/sources/: raw_currencies.sqlx  raw_order_items.sqlx  raw_orders.sqlx  raw_stores.sqlx
docs/: ab-cd-validation-pattern.md  architecture.md  incremental-strategy.md  pipeline-as-code.md  why-not-airflow.md  why-not-dbt.md
includes/: helpers.js
scripts/: add_refs.py  generate_mock_data.py  sql_to_sqlx.py
tests/: conftest.py  test_add_refs.py  test_sql_to_sqlx.py
validation_queries/: 01_baseline_pre_migration.sql  02_incremental_simulation.sql  03_pre_post_parity_check.sql  README.md
